--- a/style.css
+++ b/style.css
@@ -6,11 +6,17 @@
   font-family: "Roboto", sans-serif;
   font-size: 14px;
   font-weight: 500;
+  color: white;
 }
 
 h1 {
-  font-size: 40px;
+  font-size: 50px;
   font-weight: 500;
+  color: white;
+}
+
+h2{
+  font-size: 25px;
 }
 
 p {
@@ -23,16 +29,15 @@ a {
   color:#191d21;
 }
 
-
-
-.banner-wrap {
-  background-image: url("https://digitalassets.tesla.com/tesla-contents/image/upload/f_auto,q_auto:best/Model-S-homepage-desktop");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  height: 100vh;
+.back-video{
   width: 100vw;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
 }
+
+
 
 nav {
   display: flex;
@@ -43,21 +48,31 @@ nav {
 }
 
 .nav-item {
-  padding: 5px 15px;
+  font-size: 15px;
+  padding: 5px 25px;
   cursor: pointer;
 }
 
 .nav-item:hover {
   background-color: #d8d9da;
-  border-bottom-left-radius: 9999px;
-  border-bottom-right-radius: 9999px;
-  border-top-left-radius: 9999px;
-  border-top-right-radius: 9999px;
+  border-radius: 3px;
+}
+
+.nav-items {
+  padding: 5px 10px;
+  color: white;
+  
+}
+
+img{
+  width: 20px;
+  height: 20px;
 }
 
 .logo {
   height: 24px;
   width: 120px;
+  color: white;
 }
 
 main {
@@ -69,7 +84,7 @@ main {
 }
 
 .title-section {
-  margin-top: calc(155px - 56px);
+  margin-top: calc(100px - 56px);
 }
 
 .actions-area {
@@ -85,20 +100,17 @@ button {
   width: 264px;
   height: 40px;
   padding: 7px 27px;
-  border-bottom-left-radius: 9999px;
-  border-bottom-right-radius: 9999px;
-  border-top-left-radius: 9999px;
-  border-top-right-radius: 9999px;
+  border-radius: 3px;
   margin-right: 15px;
   cursor: pointer;
 }
 
 .btn-dark {
-  background-color: #191d21;
-  color: white;
+  background-color: #e4e4e2;
+  color: #191d21;
 }
 
 .btn-light {
-  background-color: #e4e4e2;
-  color: #191d21;
+  background-color: #191d21;
+  color: #e4e4e2;
 }
